audit-api/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audit-api-service
  namespace: events
spec:
  type: LoadBalancer
  loadBalancerIP: 35.189.108.142
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: audit-api
