audit-api/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audit-api-ingress
  namespace: events
  annotations:
    kubernetes.io/ingress.global-static-ip-name: audit-api
    networking.gke.io/v1beta1.FrontendConfig: audit-ssl-redirect
    kubernetes.io/ingress.class: gce
    ingress.gcp.kubernetes.io/pre-shared-cert: audit-api-cert
  labels:
    app: audit-api-ingress
spec:
  defaultBackend:
    service:
      name: audit-api-service
      port:
        number: 80
